# virtual-tabletop

./: Cargo.toml  Rocket.toml
src/: account.rs  main.rs  table.rs
static/css/: bootstrap.css  mods.css
static/js/: table.js
templates/: base.html.tera  create.html.tera  find.html.tera  icons.html.tera  index.html.tera  snippets.html.tera  table.html.tera
templates/account/: create.html.tera  login.html.tera  logout.html.tera  update.html.tera
