[package]
name = "network-tabletop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", path = "../Rocket/core/lib/", features = ["secrets", "json", "tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", path = "../Rocket/contrib/dyn_templates/", features = ["tera"] }
serde = { version = "*", features = ["derive"] }
flurry = "*"
